# closures_and_iterators

./: Cargo.toml
src/: lib.rs  main.rs
