[package]
name = "closures_and_iterators"
version = "0.1.0"
edition = "2021"
description = "Learning closures and iterators in rust from Rust Book"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1